Use split on runtime deps list

--- a/playbooks/roles/source_common/tasks/deps.yml
+++ b/playbooks/roles/source_common/tasks/deps.yml
@@ -27,7 +27,7 @@
 
 - name: Install Runtime Dependencies
   yum: name={{ item }} state=present
-  with_items: runtime_deps.stdout
+  with_items: runtime_deps.stdout.split("\n")
   tags:
     - deps
 
