Disable SELinux support

--- a/playbooks/roles/common/tasks/main.yml
+++ b/playbooks/roles/common/tasks/main.yml
@@ -2,4 +2,6 @@
 - include: ntp.yml
 - include: disable_firewall.yml
 - include: user_pubkey.yml
+- name: Disable SELinux Support
+  selinux: state=disabled
 
