Don't include dhcp41 as a dependency; use dhcp instead

--- a/playbooks/roles/source_common/tasks/deps.yml
+++ b/playbooks/roles/source_common/tasks/deps.yml
@@ -20,7 +20,7 @@
     - deps
 
 - name: Get Runtime Dependency List
-  shell: grep -E "^Requires:" eucalyptus.spec | awk '{print $2}' | grep -v -e % -e euca -e \/ | sort -u
+  shell: grep -E "^Requires:" eucalyptus.spec | awk '{print $2}' | grep -v -e % -e euca -e \/ -e dhcp41 | sort -u
   register: runtime_deps
   tags:
     - deps
